@@ -20,6 +20,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/sessionbutton.cpp: replace drop down menu button on session buttons
       again with the custom-created hamburger icon. Also fix positioning
       issues in mini mode.
+    - src/onmainwindow.{cpp,h}: add new function images_resource_path (),
+      similar to iconsPath () but without explicitly referring to icons.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
